Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18919

Visual corruption in Row/Column elements

    XMLWordPrintable

Details

    Description

      The Row element updates its children position using a singleShot. For that reason, the paint operation sometimes happens before the items are positioned in the right place, resulting in visual artifacts.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            arezende Adriano Rezende
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes