Position in updatePolish instead of using single shot timer

Related to QTBUG-18919, but that was not reproduceable.

Rewrites a fair bit of the autotest to no longer rely on repositionings
happening immediately.

Change-Id: I80683d6e03a5543fc838cdd55b2d53e49a8a68bd
Reviewed-on: http://codereview.qt.nokia.com/3690
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>